# finance-dashboard

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  MEMORY.md  README.md  docker-compose.yml  index.html  pyproject.toml
.claude/: settings.json
.claude/agents/: coder.md  memory-curator.md  researcher.md  skill-evolver.md
.claude/commands/: insights.md  memory.md  new.md  skills.md
.claude/skills/capture-durable-fact/: SKILL.md
.claude/skills/create-new-skill/: SKILL.md
.claude/skills/delegate-to-subagent/: SKILL.md
.claude/skills/recall-before-answering/: SKILL.md
.claude/skills/schedule-recurring-task/: SKILL.md
aether/: __init__.py  cli.py  config.py  core.py  memory.py  scheduler.py  self_evolution.py  skills.py  streaming.py  subagents.py
aether/gateway/: __init__.py  cli.py  discord.py  router.py  telegram.py
aether/tools/: __init__.py  memory.py  schedule.py  skills.py
scripts/: install.sh  run-cli.sh
tests/: test_memory.py  test_skills.py
