[project]
name = "aether-agent"
version = "0.1.0"
description = "A self-evolving multi-platform agent built on the Claude Agent SDK. Hermes-equivalent capabilities."
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.40.0",
    "python-telegram-bot>=21.0",
    "discord.py>=2.4.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "croniter>=2.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
voice = [
    "openai-whisper>=20240930",
]

[project.scripts]
aether = "aether.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aether*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
